# grpo-trait-dynamics

llm-experiments/: README.md  calibrate_base_model.py  plot_results.py  pyproject.toml  train_grpo_price.py
llm-experiments/configs/: qwen25_05b_sycophancy_main.yaml  qwen25_05b_sycophancy_reliability_sweep.yaml  qwen25_05b_sycophancy_smoke.yaml
llm-experiments/src/: __init__.py  activation_probe.py  config.py  data.py  generation.py  grpo.py  logprobs.py  lora_freeze.py  metrics.py  parsing.py  plotting.py  price.py  prompts.py  rewards.py  traits.py
llm-experiments/tests/: test_activation_invariance.py  test_data.py  test_metric_alignment.py  test_parsing.py  test_price.py  test_traits.py
simple-theory/: .gitignore  README.md  outline.md  project_claim.md  pyproject.toml  run_experiment.py  run_sweep.py
simple-theory/configs/: config.yaml  config2.yaml  config_sweep.yaml
simple-theory/docs/superpowers/specs/: 2026-06-20-price-equation-check-design.md  2026-06-21-config-restructure-and-sweep-design.md
simple-theory/specs/: 2026-06-22-simple-nn-frozen-policy-design.md
simple-theory/src/: policy.py  tabular_policy.py
simple-theory/tests/: test_run_experiment_outputs.py
