[project]
name = "grpo-trait-dynamics-llm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "transformers>=4.40",
  "peft>=0.11",
  "accelerate>=0.29",
  "safetensors>=0.4",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
